youfull/objects/Business_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ACT_ACTN1__c</fullName>
        <label>Activity - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_ACTN2__c</fullName>
        <label>Activity - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_ACTN3__c</fullName>
        <label>Activity - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_ACT_PCT__c</fullName>
        <description>This is used in G1 Active Representatives calculation</description>
        <label>Average Activity Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_QPA_CNT__c</fullName>
        <label>Average Qualified Personal Appointment R</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_RMVL_PCT__c</fullName>
        <label>Average Removal Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SIZE_AMT__c</fullName>
        <label>Average Order Size</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acct_Nr__c</fullName>
        <label>Acct_Nr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveRepCountCC_3__c</fullName>
        <label>ActiveRepCountCC+3</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActiveRepCountCC_4__c</fullName>
        <label>ActiveRepCountCC+4</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActiveRepCountCC_5__c</fullName>
        <label>ActiveRepCountCC+5</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Order_Size_Final__c</fullName>
        <label>Average Order Size Final</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BONUS_ERNGS_AMT__c</fullName>
        <formula>( GENRTN_1_QPA_CNT__c *  Business_Plan_Parameter__r.QPA_BONUS_AMT__c ) + 
(GENRTN_1_TITL_1_STF_CNT__c * Business_Plan_Parameter__r.LVL_1_PRMTN_BONUS_AMT__c) + 
(GENRTN_1_TITL_2_STF_CNT__c * Business_Plan_Parameter__r.LVL_2_PRMTN_BONUS_AMT__c) + 
(GENRTN_1_TITL_3_STF_CNT__c * Business_Plan_Parameter__r.LVL_3_PRMTN_BONUS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Earnings Current campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_1_DISTR_SLS_PCT__c</fullName>
        <label>BPar G1 Average Sales Distribution</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_1_UNIT_COMM_PCT__c</fullName>
        <label>BPar G1 Average Unit Commission Rates[%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_2_DISTR_SLS_PCT__c</fullName>
        <label>BPar G2 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_2_UNIT_COMM_PCT__c</fullName>
        <label>BPar G2 Average Unit Commission Rates[%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_3_DISTR_SLS_PCT__c</fullName>
        <label>BPar G3 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPar_AVG_GENRTN_3_UNIT_COMM_PCT__c</fullName>
        <label>BPar G3 Average Unit Commission Rates[%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Actual_SPPY__c</fullName>
        <label>Business Plan Actual SPPY</label>
        <referenceTo>Business_Plan_Actual_SPPY__c</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>Business_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Parameter__c</fullName>
        <label>Business Plan Parameter</label>
        <referenceTo>Business_Plan_Parameter__c</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>Creation Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Numbers__c</fullName>
        <label>Campaign Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_campaign__c</fullName>
        <label>Current campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXEC_ERNGS_AMT__c</fullName>
        <formula>PREV_EXEC_ERNGS_AMT__c + 
((GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_EXEC_TUS__c  *  Business_Plan_Parameter__r.AVG_EXEC_COMMSN_PCT__c/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Earning-Current Campign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLWUP_MTG_30__c</fullName>
        <label>Follow Up Meetings - 30 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLWUP_MTG_60__c</fullName>
        <label>Follow Up Meetings - 60 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLWUP_MTG_90__c</fullName>
        <label>Follow Up Meetings - 90 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Average_Sales_Distribution_BPPar__c</fullName>
        <label>G1 Average Sales Distribution [%] BPPar</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_ACT_PCT__c</fullName>
        <label>G1 Activity Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_APPT_CNT__c</fullName>
        <label>Personal Appointments - Current Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CNT__c</fullName>
        <formula>GENRTN_1_APPT_CNT__c * 
(IF(AVG_GENRTN_1_QPA_CNT__c&gt;0,AVG_GENRTN_1_QPA_CNT__c/100,       
 IF(Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Persnl Appntmnts - Curr Camp</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_RMVL_CNT__c</fullName>
        <formula>PREV_GENRTN_1_STF_CNT__c*
(IF(AVG_GENRTN_1_RMVL_PCT__c&gt;0, AVG_GENRTN_1_RMVL_PCT__c/100, 
    IF(Business_Plan_Parameter__r.AVG_RMVL_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_RMVL_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Removals - Current campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_STF_CNT__c</fullName>
        <formula>PREV_GENRTN_1_STF_CNT__c+GENRTN_1_APPT_CNT__c  - GENRTN_1_RMVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Representative Count Current Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>New Gen1 Title1 Ledr Cnt(UL)-Curr Camp</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_2_STF_CNT__c</fullName>
        <label>New Gen1 Titl2 Ledr Cnt(AUL)-Curr Camp</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_3_STF_CNT__c</fullName>
        <label>New Gen1 Titl3 Ledr Cnt(EUL)-Curr Camp</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>PREV_GENRTN_1_TITL_STF_CNT__c + GENRTN_1_TITL_1_STF_CNT__c + GENRTN_1_TITL_2_STF_CNT__c + GENRTN_1_TITL_3_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Sales Leaders (UL+) -Current campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <formula>(PREV_GENRTN_1_STF_CNT__c +  GENRTN_1_APPT_CNT__c -  GENRTN_1_RMVL_CNT__c)*
(IF(AVG_GENRTN_1_ACT_PCT__c&gt;0,AVG_GENRTN_1_ACT_PCT__c/100,
IF( Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c/100,0)
 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Reps - Current campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_UNIT_SLS__c</fullName>
        <formula>PREV_GRP_UNIT_SLS_AMT__c - PREV_PRSNL_SLS_AMT__c + PRSNL_SLS_AMT__c + 
( 
(GENTRTN_1_ACTV_REP_CNT__c - PREV_GENTRTN_1_ACTV_REP_CNT__c) * 
IF(AVG_ORD_SIZE_AMT__c&gt;0,AVG_ORD_SIZE_AMT__c, 
IF(Business_Plan_Parameter__r.AVG_ORD_SIZE__c&gt;0,Business_Plan_Parameter__r.AVG_ORD_SIZE__c,0) 
) 
) + 
(GENRTN_1_TITL_1_STF_CNT__c * Business_Plan_Parameter__r.AVG_LVL_1_ADDTNL_SLS__c) + 
(GENRTN_1_TITL_2_STF_CNT__c * Business_Plan_Parameter__r.AVG_LVL_2_ADDTNL_SLS__c) + 
(GENRTN_1_TITL_3_STF_CNT__c * Business_Plan_Parameter__r.AVG_LVL_3_ADDTNL_SLS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TUS - Current Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BP_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is BP Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Learnings__c</fullName>
        <label>Key Learnings</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_ACTN1__c</fullName>
        <label>Leadership Title Advancement - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_ACTN2__c</fullName>
        <label>Leadership Title Advancement - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_ACTN3__c</fullName>
        <label>Leadership Title Advancement - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_CND__c</fullName>
        <label>Leadership Title Achievement Candidates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDR_ERNGS_AMT__c</fullName>
        <formula>(GRP_UNIT_SLS__c -  PRSNL_SLS_AMT__c) *
( 
  Unit_Earning_Multiplier__c 
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Earnings Current campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <inlineHelpText>Custom field for BP</inlineHelpText>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeaderEarningAmtCC_5__c</fullName>
        <label>LeaderEarningAmtCC+5</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeaderEarningAmtCC_6__c</fullName>
        <label>LeaderEarningAmtCC+6</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Term_Dreams__c</fullName>
        <label>Long Term Dreams</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <label>Market Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mrkt_Id_Acct_Nr_Key__c</fullName>
        <description>Mrkt_Id_Acct_Nr_Key</description>
        <externalId>true</externalId>
        <inlineHelpText>Mrkt_Id_Acct_Nr_Key</inlineHelpText>
        <label>Business Plan Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT1_BONUS_ERNGS_AMT__c</fullName>
        <formula>( NEXT1_GENRTN_1_QPA_CNT__c *  Business_Plan_Parameter__r.QPA_BONUS_AMT__c) + 
(NEXT1_GENRTN_1_TITL_1_STF_CNT__c * Business_Plan_Parameter__r.LVL_1_PRMTN_BONUS_AMT__c) + 
(NEXT1_GENRTN_1_TITL_2_STF_CNT__c * Business_Plan_Parameter__r.LVL_2_PRMTN_BONUS_AMT__c) + 
(NEXT1_GENRTN_1_TITL_3_STF_CNT__c * Business_Plan_Parameter__r.LVL_3_PRMTN_BONUS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Earnings Current campaign +1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_EXEC_ERNGS_AMT__c</fullName>
        <formula>EXEC_ERNGS_AMT__c + 
((NEXT1_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_EXEC_TUS__c  *  Business_Plan_Parameter__r.AVG_EXEC_COMMSN_PCT__c/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Earning-Current Campaign +1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_APPT_CNT__c</fullName>
        <label>Persnl Appntmnts-Current Campaign+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_QPA_CNT__c</fullName>
        <formula>NEXT1_GENRTN_1_APPT_CNT__c* 
(IF(AVG_GENRTN_1_QPA_CNT__c&gt;0,AVG_GENRTN_1_QPA_CNT__c/100,       
 IF(Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Persnl Appntmnts - Curr camp+1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_RMVL_CNT__c</fullName>
        <formula>GENRTN_1_STF_CNT__c *
(IF(AVG_GENRTN_1_RMVL_PCT__c&gt;0, AVG_GENRTN_1_RMVL_PCT__c/100, 
    IF(Business_Plan_Parameter__r.AVG_RMVL_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_RMVL_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Removals - Current campaign + 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_STF_CNT__c</fullName>
        <formula>GENRTN_1_STF_CNT__c + NEXT1_GENRTN_1_APPT_CNT__c - NEXT1_GENRTN_1_RMVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Staff count - Current campaign + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>New Gen1 Title1 Ledr Cnt(UL)-Curr Camp+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_TITL_2_STF_CNT__c</fullName>
        <label>New Gen1 Titl2 Ledr Cnt(AUL)-Curr Camp+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_TITL_3_STF_CNT__c</fullName>
        <label>New Gen1 Titl3 Ledr cnt(EUL)-Curr Camp+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>GENRTN_1_TITL_STF_CNT__c + NEXT1_GENRTN_1_TITL_1_STF_CNT__c + NEXT1_GENRTN_1_TITL_2_STF_CNT__c + NEXT1_GENRTN_1_TITL_3_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Sales Leaders(UL+)-Current campaign+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <formula>(GENRTN_1_STF_CNT__c +   NEXT1_GENRTN_1_APPT_CNT__c -  NEXT1_GENRTN_1_RMVL_CNT__c)*
(IF(AVG_GENRTN_1_ACT_PCT__c&gt;0,AVG_GENRTN_1_ACT_PCT__c/100,
IF( Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c/100,0)
 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Reps - Current campaign + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_GRP_UNIT_SLS__c</fullName>
        <formula>GRP_UNIT_SLS__c - PRSNL_SLS_AMT__c + NEXT1_PRSNL_SLS_AMT__c + 
                                ((NEXT1_GENTRTN_1_ACTV_REP_CNT__c - GENTRTN_1_ACTV_REP_CNT__c)* Average_Order_Size_Final__c ) +
                                (NEXT1_GENRTN_1_TITL_1_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_1_ADDTNL_SLS__c) +
                                (NEXT1_GENRTN_1_TITL_2_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_2_ADDTNL_SLS__c) +
                                (NEXT1_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_3_ADDTNL_SLS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TUS - Current Campaign + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_LDR_ERNGS_AMT__c</fullName>
        <formula>(NEXT1_GRP_UNIT_SLS__c -  NEXT1_PRSNL_SLS_AMT__c) * 
( 
  Unit_Earning_Multiplier__c 
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Earnings Current campaign +1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_PRSNL_DSCNT_AMT__c</fullName>
        <formula>NEXT1_PRSNL_SLS_AMT__c * 
IF(PREV_AVG_DISCNT_PCT__c&gt;0,PREV_AVG_DISCNT_PCT__c/100,
     IF( Business_Plan_Parameter__r.AVG_DISCNT_PCT__c&gt;0, Business_Plan_Parameter__r.AVG_DISCNT_PCT__c/100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earnings frm Prsnl Sales curr campaign+1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_PRSNL_SLS_AMT__c</fullName>
        <label>Personal volume - Current Campaign + 1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Earnings(Prior Yr)-Curr campaign+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT1_TOTAL_ESTMTD_ERNGS__c</fullName>
        <formula>NEXT1_PRSNL_DSCNT_AMT__c + NEXT1_LDR_ERNGS_AMT__c + NEXT1_BONUS_ERNGS_AMT__c + NEXT1_EXEC_ERNGS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Estimated Earnings CC+1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_BONUS_ERNGS_AMT__c</fullName>
        <formula>(NEXT2_GENRTN_1_QPA_CNT__c *  Business_Plan_Parameter__r.QPA_BONUS_AMT__c) + 
(NEXT2_GENRTN_1_TITL_1_STF_CNT__c * Business_Plan_Parameter__r.LVL_1_PRMTN_BONUS_AMT__c) + 
(NEXT2_GENRTN_1_TITL_2_STF_CNT__c * Business_Plan_Parameter__r.LVL_2_PRMTN_BONUS_AMT__c) + 
(NEXT2_GENRTN_1_TITL_3_STF_CNT__c * Business_Plan_Parameter__r.LVL_3_PRMTN_BONUS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Earnings Current campaign +2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_EXEC_ERNGS_AMT__c</fullName>
        <formula>NEXT1_EXEC_ERNGS_AMT__c + 
((NEXT2_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_EXEC_TUS__c  *  Business_Plan_Parameter__r.AVG_EXEC_COMMSN_PCT__c/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Earning-Current Campaign +2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENRTN_1_APPT_CNT__c</fullName>
        <label>Persnl Appntmnts-Current Campaign+2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENRTN_1_QPA_CNT__c</fullName>
        <formula>NEXT2_GENRTN_1_APPT_CNT__c * 
(IF(AVG_GENRTN_1_QPA_CNT__c&gt;0,AVG_GENRTN_1_QPA_CNT__c/100,       
 IF(Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Persnl Appntmnts - Curr camp+2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENRTN_1_RMVL_CNT__c</fullName>
        <formula>NEXT1_GENRTN_1_STF_CNT__c * 
(IF(AVG_GENRTN_1_RMVL_PCT__c&gt;0, AVG_GENRTN_1_RMVL_PCT__c/100, 
IF(Business_Plan_Parameter__r.AVG_RMVL_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_RMVL_PCT__c/100,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Removals - Current campaign + 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENRTN_1_STF_CNT__c</fullName>
        <formula>NEXT1_GENRTN_1_STF_CNT__c + NEXT2_GENRTN_1_APPT_CNT__c - NEXT2_GENRTN_1_RMVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Staff count - Current campaign + 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>NEXT1_GENRTN_1_TITL_STF_CNT__c + NEXT2_GENRTN_1_TITL_1_STF_CNT__c + NEXT2_GENRTN_1_TITL_2_STF_CNT__c + NEXT2_GENRTN_1_TITL_3_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Sales Leaders(UL+)-Current campaign+2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <formula>(NEXT1_GENRTN_1_STF_CNT__c +   NEXT2_GENRTN_1_APPT_CNT__c -   NEXT2_GENRTN_1_RMVL_CNT__c )*
(IF(AVG_GENRTN_1_ACT_PCT__c&gt;0,AVG_GENRTN_1_ACT_PCT__c/100,
IF( Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c/100,0)
 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Reps - Current campaign + 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_GRP_UNIT_SLS__c</fullName>
        <formula>TotalUnitSalesCC_1__c - NEXT1_PRSNL_SLS_AMT__c + NEXT2_PRSNL_SLS_AMT__c + 
                                 ((NEXT2_GENTRTN_1_ACTV_REP_CNT__c - NEXT1_GENTRTN_1_ACTV_REP_CNT__c)* Average_Order_Size_Final__c )+
                                (NEXT2_GENRTN_1_TITL_1_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_1_ADDTNL_SLS__c) +
                                (NEXT2_GENRTN_1_TITL_2_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_2_ADDTNL_SLS__c) +
                                (NEXT2_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_3_ADDTNL_SLS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TUS - Current Campaign + 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_LDR_ERNGS_AMT__c</fullName>
        <formula>(TotalUnitSalesCC_2__c -NEXT2_PRSNL_SLS_AMT__c) * 
( 
  Unit_Earning_Multiplier__c 
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Earnings Current campaign +2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_PRSNL_DSCNT_AMT__c</fullName>
        <formula>NEXT2_PRSNL_SLS_AMT__c * 
IF(PREV_AVG_DISCNT_PCT__c&gt;0,PREV_AVG_DISCNT_PCT__c/100,
     IF( Business_Plan_Parameter__r.AVG_DISCNT_PCT__c&gt;0, Business_Plan_Parameter__r.AVG_DISCNT_PCT__c/100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earnings frm Prsnl Sales curr campaign+2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_PRSNL_SLS_AMT__c</fullName>
        <label>Personal volume - Current Campaign + 2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Earnings(Prior Yr)-Curr campaign+2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT2_TOTAL_ESTMTD_ERNGS__c</fullName>
        <formula>NEXT2_PRSNL_DSCNT_AMT__c + NEXT2_LDR_ERNGS_AMT__c + NEXT2_BONUS_ERNGS_AMT__c + NEXT2_EXEC_ERNGS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Estimated Earnings CC+2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_BONUS_ERNGS_AMT__c</fullName>
        <formula>(NEXT3_GENRTN_1_QPA_CNT__c *  Business_Plan_Parameter__r.QPA_BONUS_AMT__c) + 
(NEXT3_GENRTN_1_TITL_1_STF_CNT__c * Business_Plan_Parameter__r.LVL_1_PRMTN_BONUS_AMT__c) + 
(NEXT3_GENRTN_1_TITL_2_STF_CNT__c * Business_Plan_Parameter__r.LVL_2_PRMTN_BONUS_AMT__c) + 
(NEXT3_GENRTN_1_TITL_3_STF_CNT__c * Business_Plan_Parameter__r.LVL_3_PRMTN_BONUS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Earnings Current campaign +3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_EXEC_ERNGS_AMT__c</fullName>
        <formula>NEXT2_EXEC_ERNGS_AMT__c + 
((NEXT3_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_EXEC_TUS__c  *  Business_Plan_Parameter__r.AVG_EXEC_COMMSN_PCT__c/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Earning-Current Campaign +3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENRTN_1_APPT_CNT__c</fullName>
        <label>Persnl Appntmnts-Current Campaign+3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENRTN_1_QPA_CNT__c</fullName>
        <formula>NEXT3_GENRTN_1_APPT_CNT__c * 
(IF(AVG_GENRTN_1_QPA_CNT__c&gt;0,AVG_GENRTN_1_QPA_CNT__c/100,       
 IF(Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_PRSNL_QLFR_APPT_PCT__c/100,0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Persnl Appntmnts - Curr camp+3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENRTN_1_RMVL_CNT__c</fullName>
        <formula>NEXT2_GENRTN_1_STF_CNT__c * 
(IF(AVG_GENRTN_1_RMVL_PCT__c&gt;0, AVG_GENRTN_1_RMVL_PCT__c/100, 
IF(Business_Plan_Parameter__r.AVG_RMVL_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_RMVL_PCT__c/100,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Removals - Current campaign + 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENRTN_1_STF_CNT__c</fullName>
        <formula>NEXT2_GENRTN_1_STF_CNT__c + NEXT3_GENRTN_1_APPT_CNT__c - NEXT3_GENRTN_1_RMVL_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Staff count - Current campaign + 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>NEXT2_GENRTN_1_TITL_STF_CNT__c + NEXT3_GENRTN_1_TITL_1_STF_CNT__c + NEXT3_GENRTN_1_TITL_2_STF_CNT__c + NEXT3_GENRTN_1_TITL_3_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Sales Leaders(UL+)-Current campaign+3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <formula>(NEXT2_GENRTN_1_STF_CNT__c + NEXT3_GENRTN_1_APPT_CNT__c -  NEXT3_GENRTN_1_RMVL_CNT__c )* 
(IF(AVG_GENRTN_1_ACT_PCT__c&gt;0,AVG_GENRTN_1_ACT_PCT__c/100, 
IF( Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c&gt;0,Business_Plan_Parameter__r.AVG_ACTVTY_PCT__c/100,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Reps - Current campaign + 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_GRP_UNIT_SLS__c</fullName>
        <formula>TotalUnitSalesCC_2__c - NEXT2_PRSNL_SLS_AMT__c   + NEXT3_PRSNL_SLS_AMT__c +
                                ((  ActiveRepCountCC_3__c - NEXT2_GENTRTN_1_ACTV_REP_CNT__c) * 
Average_Order_Size_Final__c ) +
                                (NEXT3_GENRTN_1_TITL_1_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_1_ADDTNL_SLS__c) +
                                (NEXT3_GENRTN_1_TITL_2_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_2_ADDTNL_SLS__c) +
                                (NEXT3_GENRTN_1_TITL_3_STF_CNT__c *  Business_Plan_Parameter__r.AVG_LVL_3_ADDTNL_SLS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TUS - Current Campaign + 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_LDR_ERNGS_AMT__c</fullName>
        <formula>(NEXT3_GRP_UNIT_SLS__c -  NEXT3_PRSNL_SLS_AMT__c) * 
( 
  Unit_Earning_Multiplier__c 
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Earnings Current campaign +3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_PRSNL_DSCNT_AMT__c</fullName>
        <formula>NEXT3_PRSNL_SLS_AMT__c * 
IF(PREV_AVG_DISCNT_PCT__c&gt;0,PREV_AVG_DISCNT_PCT__c/100,
     IF( Business_Plan_Parameter__r.AVG_DISCNT_PCT__c&gt;0, Business_Plan_Parameter__r.AVG_DISCNT_PCT__c/100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earnings frm Prsnl Sales curr campaign+3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_PRSNL_SLS_AMT__c</fullName>
        <label>Personal volume - Current Campaign + 3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Earnings(Prior Yr)-Curr campaign+3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT3_TOTAL_ESTMTD_ERNGS__c</fullName>
        <formula>NEXT3_PRSNL_DSCNT_AMT__c + NEXT3_LDR_ERNGS_AMT__c + NEXT3_BONUS_ERNGS_AMT__c + NEXT3_EXEC_ERNGS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Estimated Earnings CC+3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT_1_CMPGN_NR__c</fullName>
        <label>Creation campaign + 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_1_SPPY_CMPGN_NR__c</fullName>
        <label>SPPY campaign + 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_2_CMPGN_NR__c</fullName>
        <label>Creation campaign + 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_2_SPPY_CMPGN_NR__c</fullName>
        <label>SPPY campaign + 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>